--- a/home.html
+++ b/home.html
@@ -14,9 +14,9 @@
         <h4>Welcome To Code Comm</h4>
         <span></span>
         <h2>We Will Help You To Learn</h2>
-        <p>Code Comm aka Coders'     Community help you to progress with programming skills and 
-            teach you to ways to harness power of open source.</p>
-        <a href="#" class="mu-read-more-btn">Read More</a>
+        <p>Code Comm aka Coders' Community help you to progress with programming skills and 
+            teach you ways to harness power of open source.</p>
+        <a href="#/" class="mu-read-more-btn">Read More</a>
       </div>
     </div>
     <!-- Start single slider item -->    
@@ -98,57 +98,8 @@
   </section>
   <!-- End about us -->
 
-  <!-- Start about us counter -->
-  <section id="mu-abtus-counter">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="mu-abtus-counter-area">
-            <div class="row">
-              <!-- Start counter item -->
-              <div class="col-lg-3 col-md-3 col-sm-3">
-                <div class="mu-abtus-counter-single">
-                  <span class="fa fa-book"></span>
-                  <h4 class="counter">568</h4>
-                  <p>Subjects</p>
-                </div>
-              </div>
-              <!-- End counter item -->
-              <!-- Start counter item -->
-              <div class="col-lg-3 col-md-3 col-sm-3">
-                <div class="mu-abtus-counter-single">
-                  <span class="fa fa-users"></span>
-                  <h4 class="counter">3500</h4>
-                  <p>Students</p>
-                </div>
-              </div>
-              <!-- End counter item -->
-              <!-- Start counter item -->
-              <div class="col-lg-3 col-md-3 col-sm-3">
-                <div class="mu-abtus-counter-single">
-                  <span class="fa fa-flask"></span>
-                  <h4 class="counter">65</h4>
-                  <p>Modern Lab</p>
-                </div>
-              </div>
-              <!-- End counter item -->
-              <!-- Start counter item -->
-              <div class="col-lg-3 col-md-3 col-sm-3">
-                <div class="mu-abtus-counter-single no-border">
-                  <span class="fa fa-user-secret"></span>
-                  <h4 class="counter">250</h4>
-                  <p>Teachers</p>
-                </div>
-              </div>
-              <!-- End counter item -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End about us counter -->
-
+  <div ng-include="'includes/counters.html'"></div>
+   
   <!-- Start features section -->
   <section id="mu-features">
     <div class="container">
@@ -168,42 +119,42 @@
                   <div class="mu-single-feature">
                     <span class="fa fa-book"></span>
                     <h4>Professional Courses</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
+                    <p>Courses are designed to get student at same step with latest techlogies being used by professionals.</p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6">
                   <div class="mu-single-feature">
                     <span class="fa fa-users"></span>
-                    <h4>Expert Teachers</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
+                    <h4>Expert Mentors</h4>
+                    <p>Mentors are open source enthusiasts and teach in a way that student can comfortably understand.</p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6">
                   <div class="mu-single-feature">
                     <span class="fa fa-laptop"></span>
                     <h4>Online Learning</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
+                    <p>Online assignment and special videos are provided to have full extent of immersion into programming.</p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6">
                   <div class="mu-single-feature">
                     <span class="fa fa-microphone"></span>
-                    <h4>Audio Lessons</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
+                    <h4>OnSite Lessons</h4>
+                    <p>Detailed disscussions at ease with real life programming examples. Like never before experience.</p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6">
                   <div class="mu-single-feature">
                     <span class="fa fa-film"></span>
                     <h4>Video Lessons</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
+                    <p>To reduce any possible wastage to time. Flexible topics are covered in videos to be refferenced at any time.</p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-6">
                   <div class="mu-single-feature">
                     <span class="fa fa-certificate"></span>
                     <h4>Professional Certificate</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus non dolorem excepturi libero itaque sint labore similique maxime natus eum.</p>
+                    <p>QR code to link of commits on github will be embeded on certificate to provide incremental project behaviour</p>
                   </div>
                 </div>
               </div>
@@ -233,18 +184,18 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <a href="#"><img src="assets/img/courses/1.jpg" alt="img"></a>
+                    <a href="#/"><img src="assets/img/courses/algo.jpg" alt="img"></a>
                     <figcaption class="mu-latest-course-imgcaption">
-                      <a href="#">Data Structures and Algorithms</a>
+                      <a href="#/">Algorithms</a>
                       <span><i class="fa fa-clock-o"></i>45 Days</span>
                     </figcaption>
                   </figure>
                   <div class="mu-latest-course-single-content">
-                    <h4><a href="#">Lorem ipsum dolor sit amet.</a></h4>
+                    <h4><a href="#/">Lorem ipsum dolor sit amet.</a></h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quod nisi quisquam modi dolore, dicta obcaecati architecto quidem ullam quia.</p>
                     <div class="mu-latest-course-single-contbottom">
-                      <a class="mu-course-details" href="#">Details</a>
-                      <span class="mu-course-price" href="#">₹ 4000.00</span>
+                      <a class="mu-course-details" href="#/">Details</a>
+                      <span class="mu-course-price" href="#/">₹ 4000.00</span>
                     </div>
                   </div>
                 </div>
@@ -252,18 +203,18 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <a href="#"><img src="assets/img/courses/2.jpg" alt="img"></a>
+                    <a href="#/"><img src="assets/img/courses/java.jpg" alt="img"></a>
                     <figcaption class="mu-latest-course-imgcaption">
-                      <a href="#">Core Java</a>
+                      <a href="#/">Core Java</a>
                       <span><i class="fa fa-clock-o"></i>45 Days</span>
                     </figcaption>
                   </figure>
                   <div class="mu-latest-course-single-content">
-                    <h4><a href="#">Lorem ipsum dolor sit amet.</a></h4>
+                    <h4><a href="#/">Lorem ipsum dolor sit amet.</a></h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quod nisi quisquam modi dolore, dicta obcaecati architecto quidem ullam quia.</p>
                     <div class="mu-latest-course-single-contbottom">
-                      <a class="mu-course-details" href="#">Details</a>
-                      <span class="mu-course-price" href="#">₹ 4000.00</span>
+                      <a class="mu-course-details" href="#/">Details</a>
+                      <span class="mu-course-price" href="#/">₹ 4000.00</span>
                     </div>
                   </div>
                 </div>
@@ -271,18 +222,18 @@
               <div class="col-lg-4 col-md-4 col-xs-12">
                 <div class="mu-latest-course-single">
                   <figure class="mu-latest-course-img">
-                    <a href="#"><img src="assets/img/courses/3.jpg" alt="img"></a>
+                    <a href="#/"><img src="assets/img/courses/android.jpg" alt="img"></a>
                     <figcaption class="mu-latest-course-imgcaption">
-                      <a href="#">Android</a>
+                      <a href="#/">Android</a>
                       <span><i class="fa fa-clock-o"></i>45 Days</span>
                     </figcaption>
                   </figure>
                   <div class="mu-latest-course-single-content">
-                    <h4><a href="#">Lorem ipsum dolor sit amet.</a></h4>
+                    <h4><a href="#/">Lorem ipsum dolor sit amet.</a></h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quod nisi quisquam modi dolore, dicta obcaecati architecto quidem ullam quia.</p>
                     <div class="mu-latest-course-single-contbottom">
-                      <a class="mu-course-details" href="#">Details</a>
-                      <span class="mu-course-price" href="#">₹ 5000.00</span>
+                      <a class="mu-course-details" href="#/">Details</a>
+                      <span class="mu-course-price" href="#/">₹ 5000.00</span>
                     </div>
                   </div>
                 </div>
