--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
       <div ng-include="'includes/menu.html'"></div>
       <div ng-view></div>
       <div ng-include="'includes/footer.html'"></div>
+      
+      <script type="text/javascript">
+(function(d,s,id){var z=d.createElement(s);z.type="text/javascript";z.id=id;z.async=true;z.src="//static.zotabox.com/3/0/3094a51b34437fad15aebc3e08ac2c3d/widgets.js";var sz=d.getElementsByTagName(s)[0];sz.parentNode.insertBefore(z,sz)}(document,"script","zb-embed-code"));
+</script>
 
 
   </body>
