Clear out redundant data

--- a/home.html
+++ b/home.html
@@ -72,15 +72,15 @@
                     <h2>About Us</h2>              
                   </div>
                   <!-- End Title -->
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum pariatur fuga eveniet soluta aspernatur rem, nam voluptatibus voluptate voluptates sapiente, inventore. Voluptatem, maiores esse molestiae.</p>
+                  <p>Coders' Community is a place to learn and share coding skills to aquire awesome skill set.
+                      As open source communities are best to stay updated with latest techs. Here are few reasons why you should join us.</p>
                   <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-                    <li>Saepe a minima quod iste libero rerum dicta!</li>
-                    <li>Voluptas obcaecati, iste porro fugit soluta consequuntur. Veritatis?</li>
-                    <li>Ipsam deserunt numquam ad error rem unde, omnis.</li>
-                    <li>Repellat assumenda adipisci pariatur ipsam eos similique, explicabo.</li>
+                    <li>More focus on current market trends.</li>
+                    <li>Redundent complexities are removed.</li>
+                    <li>Project based learning.</li>
+                    <li>Community goes on even when not enrolled in course.</li>
                   </ul>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quaerat harum facilis excepturi et? Mollitia!</p>
+                  <p>More over all as mixture of electronics and software will grow, IoT will be the kwt to community.</p>
                 </div>
               </div>
               <div class="col-lg-6 col-md-6">
@@ -109,7 +109,7 @@
             <!-- Start Title -->
             <div class="mu-title">
               <h2>Our Features</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ipsa ea maxime mollitia, vitae voluptates, quod at, saepe reprehenderit totam aliquam architecto fugiat sunt animi!</p>
+              <p>What makes us different is student satisfaction from our features!</p>
             </div>
             <!-- End Title -->
             <!-- Start features content -->
@@ -176,7 +176,7 @@
             <!-- Start Title -->
             <div class="mu-title">
               <h2>Latest Courses</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ipsa ea maxime mollitia, vitae voluptates, quod at, saepe reprehenderit totam aliquam architecto fugiat sunt animi!</p>
+              <p></p>
             </div>
             <!-- End Title -->
             <!-- Start latest course content -->
@@ -190,6 +190,7 @@
                       <span><i class="fa fa-clock-o"></i>45 Days</span>
                     </figcaption>
                   </figure>
+                  <!--
                   <div class="mu-latest-course-single-content">
                     <h4><a href="#/">Lorem ipsum dolor sit amet.</a></h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quod nisi quisquam modi dolore, dicta obcaecati architecto quidem ullam quia.</p>
@@ -198,6 +199,7 @@
                       <span class="mu-course-price" href="#/">₹ 4000.00</span>
                     </div>
                   </div>
+                  -->
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-xs-12">
@@ -209,6 +211,7 @@
                       <span><i class="fa fa-clock-o"></i>45 Days</span>
                     </figcaption>
                   </figure>
+                    <!--
                   <div class="mu-latest-course-single-content">
                     <h4><a href="#/">Lorem ipsum dolor sit amet.</a></h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quod nisi quisquam modi dolore, dicta obcaecati architecto quidem ullam quia.</p>
@@ -217,6 +220,7 @@
                       <span class="mu-course-price" href="#/">₹ 4000.00</span>
                     </div>
                   </div>
+                    -->
                 </div>
               </div>
               <div class="col-lg-4 col-md-4 col-xs-12">
@@ -228,6 +232,7 @@
                       <span><i class="fa fa-clock-o"></i>45 Days</span>
                     </figcaption>
                   </figure>
+                    <!--
                   <div class="mu-latest-course-single-content">
                     <h4><a href="#/">Lorem ipsum dolor sit amet.</a></h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quod nisi quisquam modi dolore, dicta obcaecati architecto quidem ullam quia.</p>
@@ -236,6 +241,7 @@
                       <span class="mu-course-price" href="#/">₹ 5000.00</span>
                     </div>
                   </div>
+                    -->
                 </div>
               </div>
             </div>
