corrected spelling of redundant

--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
                       As open source communities are best to stay updated with latest techs. Here are few reasons why you should join us.</p>
                   <ul>
                     <li>More focus on current market trends.</li>
-                    <li>Redundent complexities are removed.</li>
+                    <li>Redundant complexities are removed.</li>
                     <li>Project based learning.</li>
                     <li>Community goes on even when not enrolled in course.</li>
                   </ul>
